[package]
name = "pqcscan"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-channel = "2.3.1"
byteorder = "1.5.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.29", features = ["cargo", "derive"] }
env_logger = "0.11.6"
lazy_static = "1.5.0"
log = "0.4.25"
rand = "0.9.0"
rust-embed = { version = "8.5.0", features = ["include-exclude", "interpolate-folder-path"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tera = "1.20.0"
tokio = { version = "1.43.0", features = ["full"] }
